Grace/tests/gibbs/errors/t286.grace
// ERROR = P1018
catch {Exception.raise "Ah!"}
    case {}
    finally (.)
